--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,22 +17,42 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://biryaniyoyo.com/" />
+  <meta property="og:url" content="https://www.biryaniyoyo.in/" />
   <meta property="og:title" content="Biryani YoYo | Authentic Biryani & Cloud Kitchen" />
   <meta property="og:description"
     content="Premium Cloud Kitchen serving authentic Biryani and Indian delicacies straight to your doorstep." />
-  <meta property="og:image" content="https://biryaniyoyo.com/og-image.jpg" />
+  <meta property="og:image" content="https://www.biryaniyoyo.in/logo.jpeg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://biryaniyoyo.com/" />
+  <meta property="twitter:url" content="https://www.biryaniyoyo.in/" />
   <meta property="twitter:title" content="Biryani YoYo | Authentic Biryani & Cloud Kitchen" />
   <meta property="twitter:description"
     content="Premium Cloud Kitchen serving authentic Biryani and Indian delicacies straight to your doorstep." />
-  <meta property="twitter:image" content="https://biryaniyoyo.com/og-image.jpg" />
+  <meta property="twitter:image" content="https://www.biryaniyoyo.in/logo.jpeg" />
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://biryaniyoyo.com/" />
+  <link rel="canonical" href="https://www.biryaniyoyo.in/" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Biryani YoYo",
+      "image": "https://www.biryaniyoyo.in/logo.jpeg",
+      "url": "https://www.biryaniyoyo.in/",
+      "servesCuisine": "Indian",
+      "priceRange": "$$",
+      "description": "Premium Cloud Kitchen in Dwarka serving authentic Chicken & Mutton Biryani, Kebabs, and Indian delicacies.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Dwarka",
+        "addressRegion": "Delhi",
+        "addressCountry": "IN"
+      }
+    }
+  </script>
 
   <link href="/src/index.css" rel="stylesheet">
 </head>
